--- a/port.html
+++ b/port.html
@@ -2,41 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pratik | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+
+  <!-- Header -->
   <header>
-    <h1>Pratik Samanta</h1>
+    <div class="logo">Pratik</div>
     <nav>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
-  <section id="home">
-    <h2>Welcome to My Portfolio</h2>
-    <p>I am a passionate web developer.</p>
+  <!-- Hero Section -->
+  <section id="home" class="hero">
+    <h1>Hi, I'm <span>Pratik</span></h1>
+    <p><span id="typing-text"></span></p>
   </section>
 
-  <section id="about">
+  <!-- About Section -->
+  <section id="about" class="about">
     <h2>About Me</h2>
-    <p>Hello! I'm Pratik. I build websites using HTML, CSS, and JavaScript.</p>
+    <p>I'm a frontend developer skilled in HTML, CSS, and JavaScript. I create responsive, dynamic websites with great UX.</p>
   </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <ul>
-      <li>🛠 Portfolio Website</li>
-      <li>🛒 E-commerce Landing Page</li>
-      <li>📱 Responsive UI Designs</li>
-    </ul>
+  <!-- Projects Section -->
+  <section id="projects" class="projects">
+    <h2>My Projects</h2>
+    <div class="project-grid">
+      <div class="project-card">
+        <img src="assets/images/project1.jpg" alt="Project 1">
+        <h3>Portfolio Website</h3>
+        <p>My personal website built with HTML, CSS, JS.</p>
+      </div>
+      <div class="project-card">
+        <img src="assets/images/project2.jpg" alt="Project 2">
+        <h3>Landing Page</h3>
+        <p>Clean and modern product landing page.</p>
+      </div>
+      <!-- Add more cards -->
+    </div>
   </section>
 
-  <section id="contact">
+  <!-- Contact Section -->
+  <section id="contact" class="contact">
     <h2>Contact Me</h2>
     <form id="contactForm">
       <input type="text" placeholder="Your Name" required />
@@ -46,10 +64,11 @@
     </form>
   </section>
 
+  <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Pratik Samanta. All rights reserved.</p>
+    <p>&copy; 2025 Pratik Samanta</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
-        </html>
+</html>
